--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -25,3 +25,7 @@ a.btn {
     color: #555;
 }
 
+.content-wrapper {
+    padding: 20px 0;
+}
+
